--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,123 @@
-fastapi
-uvicorn
-python-dotenv
-langchain
-langchain-community
-pydantic
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+attrs==25.4.0
+backoff==2.2.1
+beautifulsoup4==4.14.3
+certifi==2026.1.4
+cffi==2.0.0
+charset-normalizer==3.4.4
+click==8.3.1
+clickhouse-connect==0.10.0
+cryptography==46.0.4
+dataclasses-json==0.6.7
+distro==1.9.0
+duckdb==1.4.4
+faiss-cpu==1.13.2
+fastapi==0.128.0
+filelock==3.20.3
+filetype==1.2.0
+frozenlist==1.8.0
+fsspec==2026.1.0
+google==3.0.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.25.2
+google-api-python-client==2.188.0
+google-auth==2.48.0
+google-auth-httplib2==0.3.0
+google-genai==1.61.0
+google-generativeai==0.8.6
+googleapis-common-protos==1.72.0
+grpcio==1.76.0
+grpcio-status==1.71.2
+h11==0.16.0
+hf-xet==1.2.0
+hnswlib==0.8.0
+httpcore==1.0.9
+httplib2==0.31.2
+httptools==0.7.1
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface_hub==1.3.5
+idna==3.11
+Jinja2==3.1.6
+joblib==1.5.3
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==1.2.7
+langchain-classic==1.0.1
+langchain-community==0.4.1
+langchain-core==1.2.7
+langchain-google-genai==4.2.0
+langchain-text-splitters==1.1.0
+langgraph==1.0.7
+langgraph-checkpoint==4.0.0
+langgraph-prebuilt==1.0.7
+langgraph-sdk==0.3.3
+langsmith==0.6.7
+lz4==4.4.5
+MarkupSafe==3.0.3
+marshmallow==3.26.2
+mpmath==1.3.0
+multidict==6.7.1
+mypy_extensions==1.1.0
+networkx==3.6.1
+numpy==2.4.2
+orjson==3.11.6
+ormsgpack==1.12.2
+packaging==25.0
+pandas==3.0.0
+posthog==7.8.0
+propcache==0.4.1
+proto-plus==1.27.0
+protobuf==5.29.5
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pycparser==3.0
+pydantic==2.12.5
+pydantic-settings==2.12.0
+pydantic_core==2.41.5
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+regex==2026.1.15
+requests==2.32.5
+requests-toolbelt==1.0.0
+rsa==4.9.1
+safetensors==0.7.0
+scikit-learn==1.8.0
+scipy==1.17.0
+sentence-transformers==5.2.2
+setuptools==80.10.2
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8.3
+SQLAlchemy==2.0.46
+starlette==0.50.0
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.22.2
+torch==2.10.0
+tqdm==4.67.2
+transformers==5.0.0
+typer-slim==0.21.1
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uritemplate==4.2.0
+urllib3==2.6.3
+uuid_utils==0.14.0
+uvicorn==0.40.0
+uvloop==0.22.1
+watchfiles==1.1.1
+websockets==15.0.1
+xxhash==3.6.0
+yarl==1.22.0
+zstandard==0.25.0
